--- a/server/server/server.csproj
+++ b/server/server/server.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Model\" />
+      <Folder Include="Db\" />
     </ItemGroup>
 
 </Project>
