--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmbeddingParameters": {
+    "ResourceName": "",
+    "ApiKey": "",
+    "DeploymentId": "ada-embedding",
+    "ApiVersion": "2024-03-01-preview"
+  }
 }
