--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "EmbeddingParameters": {
-    "ResourceName": "citterio-embeddings",
-    "ApiKey": "51e500654ed940ed898ca3e2c4c75130",
+    "ResourceName": "",
+    "ApiKey": "",
     "DeploymentId": "ada-embedding",
     "ApiVersion": "2024-03-01-preview"
   }
