test autenticazione non funzionante

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -11,5 +11,13 @@
     "ApiKey": "",
     "DeploymentId": "ada-embedding",
     "ApiVersion": "2024-03-01-preview"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "https://localhost:5001",
+    "TenantId": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "CallbackPath": "/signin-oidc"
   }
 }
