--- a/Mantenimento_Contesto/Mantenimento_Contesto/Mantenimento_Contesto.csproj
+++ b/Mantenimento_Contesto/Mantenimento_Contesto/Mantenimento_Contesto.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="MySql.Data" Version="8.4.0" />
     <PackageReference Include="MySqlConnector" Version="2.3.7" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="SSH.NET" Version="2024.0.0" />
   </ItemGroup>
 
