--- a/server/server/server.csproj
+++ b/server/server/server.csproj
@@ -11,6 +11,9 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
         <PackageReference Include="Microsoft.Identity.Web" Version="2.18.1" />
+        <PackageReference Include="Microsoft.Identity.Web.Diagnostics" Version="2.18.2" />
+        <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.18.2" />
+        <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.18.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
