--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbSettings": {
+    "Server": "localhost",
+    "Database": "RagDb",
+    "UserId": "postgres",
+    "Password": "postgres"
+  }
 }
