autenticazione microsoft teoricamente funzionante praticamente no

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -12,12 +12,10 @@
     "DeploymentId": "ada-embedding",
     "ApiVersion": "2024-03-01-preview"
   },
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "https://localhost:5001",
-    "TenantId": "",
-    "ClientId": "",
-    "ClientSecret": "",
-    "CallbackPath": "/signin-oidc"
+  "Authentication": {
+    "Microsoft": {
+      "ClientId": "ni78Q~m1xZ~o28qFuCmHC.0pncCbat.oUCHDAa2y",
+      "ClientSecret": "4944e8e9-56e8-4e29-aae3-c0984e6b53b2"
+    }
   }
 }
