feat: updating id

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -12,10 +12,15 @@
     "DeploymentId": "ada-embedding",
     "ApiVersion": "2024-03-01-preview"
   },
-  "Authentication": {
-    "Microsoft": {
-      "ClientId": "ni78Q~m1xZ~o28qFuCmHC.0pncCbat.oUCHDAa2y",
-      "ClientSecret": "4944e8e9-56e8-4e29-aae3-c0984e6b53b2"
-    }
+  "AzureAD": {
+    "Instance": "https://login.microsoftonline.com",
+    "TenantId": "ed0c1ffa-0e44-4fb9-9cb9-889ccf3fa6f4",
+    "ClientId": "61234027-08f0-4f85-bdc6-f7c78c099c2f",
+    "Audience": "api://mydemoapi",
+    "CallbackUrl": "./signin-oidc",
+    "SigoutcallbackUrl": "./signout-oidc"
+  },
+  "ConnectionStrings": {
+    "RagServerContextConnection": "Server=(localdb)\\mssqllocaldb;Database=server;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
