--- a/server/server/server.csproj
+++ b/server/server/server.csproj
@@ -11,11 +11,19 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OAuth" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Identity.Web" Version="2.18.1" />
         <PackageReference Include="Microsoft.Identity.Web.Diagnostics" Version="2.18.2" />
         <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.18.2" />
         <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.18.1" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
