feat: Client microsoft auth

--- a/client/client/appsettings.json
+++ b/client/client/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAD": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "ed0c1ffa-0e44-4fb9-9cb9-889ccf3fa6f4",
+    "ClientId": "61234027-08f0-4f85-bdc6-f7c78c099c2f",
+    "ClientSecret": "006ed40e-fd3c-4bea-a0e6-e954de06b3eb",
+    "Audience": "api://mydemoapi",
+    "CallbackUrl": "./signin-oidc",
+    "SigoutcallbackUrl": "./signout-oidc"
+  }
 }
