--- a/client/client/client.csproj
+++ b/client/client/client.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.5" />
+      <PackageReference Include="Microsoft.Identity.Web" Version="3.0.0-preview1" />
+    </ItemGroup>
+
 </Project>
