feat: autenticazione tramite jwt da esempio

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "qrOPL8xa5ZtZkUF7UhKT3XrgdCRhCg9FX9H8Cl0q.",
+    "Issuer": "https://localhost:5001/",
+    "Audience": "https://localhost:5001/"
+  }
 }
