autenticazione da testare ma quasi finita

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -10,5 +10,8 @@
     "Key": "qrOPL8xa5ZtZkUF7UhKT3XrgdCRhCg9FX9H8Cl0q.",
     "Issuer": "https://localhost:5001/",
     "Audience": "https://localhost:5001/"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=UsersCredentials;Username=postgres;Password=root"
   }
 }
