--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PgVectorContext": "Host=localhost;Database=postgres;Username=postgres;Password=postgres"
+  },
   "DbSettings": {
     "Server": "localhost",
     "Database": "RagDb",
