autenticazione funzionante da testare con db

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "https://localhost:5001/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=UsersCredentials;Username=postgres;Password=root"
+    "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=postgres"
   }
 }
