Fix: Reso più veloce l'api upload e divisione in chunk eliminava l'ultimo chunk

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -13,9 +13,9 @@
     "Audience": "https://localhost:5001/"
   },
   "EmbeddingParameters": {
-    "ResourceName": "",
-    "ApiKey": "",
-    "DeploymentId": "ada-embedding",
+    "ResourceName": "Panzeri-Embedding",
+    "ApiKey": "b98bb065c5274c879e10e9c420fd8739",
+    "DeploymentId": "ada-Embedding",
     "ApiVersion": "2024-03-01-preview"
   },
   "ConnectionStrings": {
