update conversazione, invio messaggi a chat e fix generali

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -6,13 +6,23 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "qrOPL8xa5ZtZkUF7UhKT3XrgdCRhCg9FX9H8Cl0q.",
+    "Issuer": "https://localhost:5001/",
+    "Audience": "https://localhost:5001/"
+  },
   "EmbeddingParameters": {
-    "ResourceName": "",
+    "ResourceName": "galimberti-embeddings",
     "ApiKey": "",
-    "DeploymentId": "ada-embedding",
+    "DeploymentId": "ada-embeddings",
     "ApiVersion": "2024-03-01-preview"
   },
-
+  "ChatParameters": {
+    "ResourceName": "galimberti-chat",
+    "ApiKey": "",
+    "DeploymentId": "gpt-35-turbo",
+    "ApiVersion": "2024-03-01-preview"
+  },
   "ConnectionStrings": {
     "PgVectorContext": "Host=localhost;Database=postgres;Username=postgres;Password=postgres"
   }
