Feat: Ora chat risponde

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -20,7 +20,7 @@
   "ChatParameters": {
     "ResourceName": "GojoAI-Chan",
     "ApiKey": "a663379c558746768f92028d8a6b5c51",
-    "DeploymentId": "gpt-35-turbo",
+    "DeploymentId": "gpt-4",
     "ApiVersion": "2024-03-01-preview"
   },
   "ConnectionStrings": {
