--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -24,6 +24,6 @@
     "ApiVersion": "2024-03-01-preview"
   },
   "ConnectionStrings": {
-    "PgVectorContext": "Host=pgvector;Database=postgres;Username=postgres;Password=postgres"
+    "PgVectorContext": "Host=localhost;Database=postgres;Username=postgres;Password=postgres"
   }
 }
