feat: added markdown and insta-scroll down on chat

--- a/client/client/client.csproj
+++ b/client/client/client.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Markdig" Version="0.37.0" />
+    </ItemGroup>
+
 </Project>
